Adds initial solution (requires improvements)

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,12 @@ html {
   width: 100%;
   height: 40px;
 }
+
+.numberField {
+  text-align: right;
+}
+
+.operatorField {
+  text-align: center;
+  color: tomato;
+}
